--- a/诊所/设置/诊所设置.md
+++ b/诊所/设置/诊所设置.md
@@ -1,4 +1,4 @@
-# 门店设置
+# 诊所设置
 
 > 更新记录
 
@@ -16,13 +16,13 @@
 ## 全部设置项
 
 ```
-GET /clinic/clinic/v1/setting/:clinicId
+GET /clinic/setting/v1/setting/:clinicId
 ```
 
 ## 按项查看
 
 ```
-GET /clinic/clinic/v1/setting/:clinicId?path=:item
+GET /clinic/setting/v1/setting/:clinicId?path=:item
 ```
 
 > 其中:item为设置项, 见下表
