--- a/诊所/设置/预检项目.md
+++ b/诊所/设置/预检项目.md
@@ -1,4 +1,4 @@
-# 检查项目
+# 预检项目
 
 > 更新记录
 
@@ -23,12 +23,6 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>category</td>
-        <td>string</td>
-        <td>类型</td>
-        <td>常规, 特检</td>
-    </tr>
-    <tr>
         <td>name</td>
         <td>string</td>
         <td>名称</td>
@@ -38,12 +32,6 @@
         <td>description</td>
         <td>string</td>
         <td>描述</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>price</td>
-        <td>int</td>
-        <td>价格 单位: 分</td>
         <td>-</td>
     </tr>
     <tr>
@@ -78,10 +66,10 @@
     </tr>
 </table>
 
-## 添加检查项
+## 添加预检项
 
 ```
-GET /clinic/setting/v1/item
+GET /clinic/setting/v1/precheck/item
 ```
 > 请求参数
 
@@ -99,12 +87,6 @@ GET /clinic/setting/v1/item
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>category</td>
-        <td>string</td>
-        <td>是</td>
-        <td>类型, 常规, 特检</td>
-    </tr>
-    <tr>
         <td>name</td>
         <td>string</td>
         <td>是</td>
@@ -115,12 +97,6 @@ GET /clinic/setting/v1/item
         <td>string</td>
         <td>-</td>
         <td>描述</td>
-    </tr>
-    <tr>
-        <td>price</td>
-        <td>int</td>
-        <td>-</td>
-        <td>价格 单位: 分</td>
     </tr>
     <tr>
         <td>doubleEye</td>
@@ -154,10 +130,10 @@ GET /clinic/setting/v1/item
     </tr>
 </table>
 
-## 编辑检查项
+## 编辑预检项
 
 ```
-PATCH /clinic/setting/v1/item/:id
+PATCH /clinic/setting/v1/precheck/item/:id
 ```
 > 请求参数
 
@@ -175,12 +151,6 @@ PATCH /clinic/setting/v1/item/:id
         <td>描述</td>
     </tr>
     <tr>
-        <td>price</td>
-        <td>int</td>
-        <td>-</td>
-        <td>价格 单位: 分</td>
-    </tr>
-    <tr>
         <td>doubleEye</td>
         <td>bool</td>
         <td>-</td>
@@ -212,16 +182,16 @@ PATCH /clinic/setting/v1/item/:id
     </tr>
 </table>
 
-## 删除检查项
+## 删除预检项
 
 ```
-DELETE /clinic/setting/v1/item/:id
+DELETE /clinic/setting/v1/precheck/item/:id
 ```
 
-## 诊所已经选择的检查项列表
+## 诊所已经选择的预检项列表
 
 ```
-GET /clinic/setting/v1/item
+GET /clinic/setting/v1/precheck/item
 ```
 > 请求参数
 
@@ -240,10 +210,10 @@ GET /clinic/setting/v1/item
     </tr>
 </table>
 
-## 系统支持的所有检查项列表
+## 系统支持的所有预检项列表
 
 ```
-GET /clinic/setting/v1/item/default
+GET /clinic/setting/v1/precheck/item/default
 ```
 > 请求参数
 
@@ -253,12 +223,6 @@ GET /clinic/setting/v1/item/default
         <th style="width:60px;">类型</th>
         <th style="width:60px;">必填</th>
         <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>category</td>
-        <td>string</td>
-        <td>-</td>
-        <td>类别, 常规, 特检</td>
     </tr>
     <tr>
         <td>keyword</td>
