--- a/诊所/检查/检查单项目.md
+++ b/诊所/检查/检查单项目.md
@@ -163,5 +163,13 @@ POST /clinic/optometry/v1/optometry/item
 ## 删除项目
 
 ```
+POST /clinic/optometry/v1/optometry/item/delete
+```
+
+> 参数同添加项目
+
+## 删除项目(按项目ID)
+
+```
 DELETE /clinic/optometry/v1/optometry/item/:id
 ```
