--- a/诊所/检查/检查单数据.md
+++ b/诊所/检查/检查单数据.md
@@ -82,7 +82,7 @@
 ## 提交检查项数据
 
 ```
-POST /clinic/optometry/v1/optometry/item/data
+POST /clinic/optometry/v1/optometry/data
 ```
 
 >请求参数
@@ -134,5 +134,25 @@ POST /clinic/optometry/v1/optometry/item/data
         <td>string</td>
         <td>-</td>
         <td>备注</td>
+    </tr>
+</table>
+
+## 检查单数据列表
+
+```
+GET /clinic/optometry/v1/optometry/data
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>是</td>
+        <td>检查单ID</td>
     </tr>
 </table>
