--- a/诊所/预检/预检.md
+++ b/诊所/预检/预检.md
@@ -199,3 +199,23 @@ POST /clinic/precheck/v1/precheck/data
         <td>检查数据</td>
     </tr>
 </table>
+
+## 预检数据列表
+
+```
+GET /clinic/precheck/v1/precheck/data
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>precheckId</td>
+        <td>是</td>
+        <td>预检单ID</td>
+    </tr>
+</table>
