--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -20,7 +20,31 @@
         <td>string</td>
         <td>诊所名称</td>
         <td>-</td>
-    </tr>  
+    </tr>
+    <tr>
+        <td>evaluation</td>
+        <td>string</td>
+        <td>综合评估</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>suggestion</td>
+        <td>string</td>
+        <td>矫正方案建议</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>followUpTime</td>
+        <td>int</td>
+        <td>建议复诊时间</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>prescription</td>
+        <td>map</td>
+        <td>处方单</td>
+        <td>-</td>
+    </tr>
     <tr>
         <td>totalAmount</td>
         <td>int</td>
@@ -109,6 +133,52 @@ GET /clinic/optometry/v1/optometry
 ```
 GET /clinic/optometry/v1/optometry/:id
 ```
+
+## 更新
+
+```
+PATCH /clinic/optometry/v1/optometry/:id
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>evaluation</td>
+        <td>string</td>
+        <td>-</td>
+        <td>综合评估</td>
+    </tr>
+    <tr>
+        <td>suggestion</td>
+        <td>string</td>
+        <td>-</td>
+        <td>矫正方案建议</td>
+    </tr>
+    <tr>
+        <td>followUpTime</td>
+        <td>int</td>
+        <td>-</td>
+        <td>建议复诊时间</td>
+    </tr>
+    <tr>
+        <td>prescription</td>
+        <td>map</td>
+        <td>-</td>
+        <td>处方单</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注,取消原因</td>
+    </tr>
+</table>
 
 ## 取消
 
