--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -164,6 +164,12 @@ POST /clinic/storage/v1/upload
         <td>上传的文件</td>
     </tr>
     <tr>
+        <td>prefix</td>
+        <td>-</td>
+        <td>string</td>
+        <td>key的前缀, 区分上传类型, 如患者: patient 检查单: optometry 手术记录: surgical</td>
+    </tr>
+    <tr>
         <td>key</td>
         <td>-</td>
         <td>string</td>
