--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -143,6 +143,11 @@
 
 > 响应内容: 对象或者数组 <a href="http://tool.oschina.net/codeformat/json" target="_blank">附在线json格式化工具</a>
 
+## 当前服务器时间戳
+`
+GET /clinic/data/v1/time
+`
+
 ## 上传文件
 
 `
@@ -177,11 +182,6 @@ POST /clinic/storage/v1/upload
     </tr>
 </table>
 
-## 访问上传文件
-> 直接访问文件, 不需要认证
-`
-GET /storage/:key
-`
 
 ## 获取上传文件
 > 通过接口获取上传文件, 需要认证
