--- a/诊所/检查/检查项目.md
+++ b/诊所/检查/检查项目.md
@@ -99,6 +99,12 @@ GET /clinic/optometry/v1/item
         <td>诊所ID</td>
     </tr>
     <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>-</td>
+        <td>类型: 常规,特检,处方单</td>
+    </tr>
+    <tr>
         <td>include</td>
         <td>string</td>
         <td>-</td>
