--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -40,12 +40,6 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>prescription</td>
-        <td>map</td>
-        <td>处方单</td>
-        <td>-</td>
-    </tr>
-    <tr>
         <td>totalAmount</td>
         <td>int</td>
         <td>总价</td>
@@ -164,19 +158,41 @@ PATCH /clinic/optometry/v1/optometry/:id
         <td>followUpTime</td>
         <td>int</td>
         <td>-</td>
-        <td>建议复诊时间</td>
-    </tr>
-    <tr>
-        <td>prescription</td>
-        <td>map</td>
-        <td>-</td>
-        <td>处方单</td>
+        <td>建议复诊时间戳</td>
     </tr>
     <tr>
         <td>remark</td>
         <td>string</td>
         <td>-</td>
         <td>备注,取消原因</td>
+    </tr>
+</table>
+
+## 完成
+
+```
+POST /clinic/optometry/v1/optometry/complete
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>id</td>
+        <td>string</td>
+        <td>是</td>
+        <td>ID</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
     </tr>
 </table>
 
