--- a/诊所/检查/检查单数据.md
+++ b/诊所/检查/检查单数据.md
@@ -103,7 +103,7 @@ POST /clinic/optometry/v1/optometry/data
         <td>category</td>
         <td>string</td>
         <td>是</td>
-        <td>检查项类别, normal: 常规 special: 特检</td>
+        <td>检查项类别: 常规,特检,处方</td>
     </tr>
     <tr>
         <td>data</td>
@@ -141,6 +141,26 @@ POST /clinic/optometry/v1/optometry/data
 
 ```
 GET /clinic/optometry/v1/optometry/data
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>是</td>
+        <td>检查单ID</td>
+    </tr>
+</table>
+
+## 检查单处方列表
+
+```
+GET /clinic/optometry/v1/optometry/prescription
 ```
 > 请求参数
 
