--- a/诊所/检查/检查单数据.md
+++ b/诊所/检查/检查单数据.md
@@ -37,7 +37,7 @@
     <tr>
         <td>category</td>
         <td>string</td>
-        <td>检查项类别</td>
+        <td>检查项类别: 常规,特检,处方</td>
         <td>-</td>
     </tr>
     <tr>
