--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -40,6 +40,12 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>prescription</td>
+        <td>string</td>
+        <td>处方单</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>totalAmount</td>
         <td>int</td>
         <td>总价</td>
