--- a/诊所/检查/检查单处方.md
+++ b/诊所/检查/检查单处方.md
@@ -1,4 +1,4 @@
-# 检查单数据
+# 检查单处方
 
 > 更新记录
 
@@ -37,7 +37,7 @@
     <tr>
         <td>category</td>
         <td>string</td>
-        <td>检查项类别: 常规,特检,处方</td>
+        <td>检查项类别: 处方</td>
         <td>-</td>
     </tr>
     <tr>
@@ -79,10 +79,10 @@
 </table>
 
 
-## 提交检查项数据
+## 提交检查项处方数据
 
 ```
-POST /clinic/optometry/v1/optometry/data
+POST /clinic/optometry/v1/optometry/prescription
 ```
 
 >请求参数
@@ -103,7 +103,7 @@ POST /clinic/optometry/v1/optometry/data
         <td>category</td>
         <td>string</td>
         <td>是</td>
-        <td>检查项类别: 常规,特检</td>
+        <td>检查项类别: 处方</td>
     </tr>
     <tr>
         <td>data</td>
@@ -137,10 +137,30 @@ POST /clinic/optometry/v1/optometry/data
     </tr>
 </table>
 
-## 检查单数据列表
+## 检查单处方单列表
 
 ```
-GET /clinic/optometry/v1/optometry/data
+GET /clinic/optometry/v1/optometry/prescription/item
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>是</td>
+        <td>检查单ID</td>
+    </tr>
+</table>
+
+## 检查单处方单数据列表
+
+```
+GET /clinic/optometry/v1/optometry/prescription
 ```
 > 请求参数
 
