--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -63,6 +63,24 @@
         <td>状态</td>
         <td>waiting("开单中"), doing("检查中"), ok("完成")</td>
     </tr>
+    <tr>
+        <td>itemList</td>
+        <td>array</td>
+        <td>检查单项目列表</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>dataList</td>
+        <td>array</td>
+        <td>检查单数据列表</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>prescriptionList</td>
+        <td>array</td>
+        <td>检查单处方列表</td>
+        <td>-</td>
+    </tr>
 </table>
 
 
@@ -165,6 +183,12 @@ PATCH /clinic/optometry/v1/optometry/:id
         <td>int</td>
         <td>-</td>
         <td>建议复诊时间戳</td>
+    </tr>
+    <tr>
+        <td>prescription</td>
+        <td>string</td>
+        <td>-</td>
+        <td>处方单列表, 逗号分隔</td>
     </tr>
     <tr>
         <td>remark</td>
