--- a/诊所/患者/患者.md
+++ b/诊所/患者/患者.md
@@ -148,6 +148,18 @@
         <td>转介绍人</td>
         <td>见全局/系统参数</td>
     </tr>
+    <tr>
+        <td>qpscName</td>
+        <td>string</td>
+        <td>轻派体检系统姓名</td>
+        <td>轻派体检系统绑定</td>
+    </tr>
+    <tr>
+        <td>qpscIdcard</td>
+        <td>string</td>
+        <td>轻派体检系统证件号</td>
+        <td>轻派体检系统绑定</td>
+    </tr>
 </table>
 
 ## 添加患者
