--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -169,16 +169,22 @@ POST /clinic/storage/v1/upload
         <td>上传的文件</td>
     </tr>
     <tr>
+        <td>clinicId</td>
+        <td>是</td>
+        <td>long</td>
+        <td>诊所ID</td>
+    </tr>
+    <tr>
         <td>prefix</td>
         <td>-</td>
         <td>string</td>
-        <td>key的前缀, 区分上传类型, 如患者: patient 检查单: optometry 手术记录: surgical</td>
+        <td>key的前缀, 区分上传类型, 如患者: patient 检查单: optometry 手术记录: surgical, 不传默认:file</td>
     </tr>
     <tr>
         <td>key</td>
         <td>-</td>
         <td>string</td>
-        <td>文件保存的key</td>
+        <td>文件保存的key, 不传自动生成</td>
     </tr>
 </table>
 
