增加第三方接口

--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -1,4 +1,4 @@
-# 检查配置
+# 配置项
 
 > 更新记录
 
@@ -48,10 +48,10 @@
     </tr>
 </table>
 
-## 配置列表, 诊所已选
+## 配置列表
 
 ```
-GET /clinic/setting/v1/optometry/config
+GET /clinic/setting/v1/setting
 ```
 > 请求参数
 
@@ -85,7 +85,7 @@ GET /clinic/setting/v1/optometry/config
 ## 配置查看
 
 ```
-GET /clinic/setting/v1/optometry/config/get-by-name
+GET /clinic/setting/v1/setting/get-by-name
 ```
 > 请求参数
 
@@ -110,10 +110,10 @@ GET /clinic/setting/v1/optometry/config/get-by-name
     </tr>
 </table>
 
-## 配置列表, 所有
+## 默认配置列表
 
 ```
-GET /clinic/setting/v1/optometry/config/default
+GET /clinic/setting/v1/setting/default
 ```
 > 请求参数
 
@@ -147,7 +147,7 @@ GET /clinic/setting/v1/optometry/config/default
 ## 添加配置项
 
 ```
-POST /clinic/setting/v1/optometry/config
+POST /clinic/setting/v1/setting
 ```
 > 请求参数
 
