--- a/诊所/检查/检查配置.md
+++ b/诊所/检查/检查配置.md
@@ -51,7 +51,7 @@
 ## 配置列表
 
 ```
-GET /clinic/setting/v1/optometry/config
+GET /clinic/optometry/v1/setting
 ```
 > 请求参数
 
@@ -77,15 +77,15 @@ GET /clinic/setting/v1/optometry/config
     <tr>
         <td>name</td>
         <td>string</td>
-        <td>-</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间,处方单</td>
+        <td>是</td>
+        <td>配置项名称, 逗号分隔, 可选: 综合评估,矫正方案建议,复诊时间,处方单</td>
     </tr>
 </table>
 
 ## 配置查看
 
 ```
-GET /clinic/setting/v1/optometry/config/get-by-name
+GET /clinic/optometry/v1/setting/get-by-name
 ```
 > 请求参数
 
