增加用户接口

--- a/诊所/crm/患者.md
+++ b/诊所/crm/患者.md
@@ -50,7 +50,7 @@
         <td>idcardType</td>
         <td>string</td>
         <td>证件类型</td>
-        <td>身份证: sfz 护照: hz 港澳居民来往内地通行证: txz 台湾居民来往大陆通行证: tw 外国人永久居留身份证: waiguoren 港澳台居民居住证: hkmojumin</td>
+        <td>身份证,护照,港澳居民来往内地通行证,台湾居民来往大陆通行证,外国人永久居留身份证,港澳台居民居住证</td>
     </tr>
     <tr>
         <td>idcardNum</td>
@@ -68,7 +68,7 @@
         <td>gender</td>
         <td>Gender</td>
         <td>性别</td>
-        <td>男: male, 女: female, 未知: unknown</td>
+        <td>男,女,未知</td>
     </tr>
     <tr>
         <td>birthday</td>
