--- a/诊所/用户/用户.md
+++ b/诊所/用户/用户.md
@@ -138,142 +138,6 @@
     </tr>
 </table>
 
-## 添加用户
-
-```
-POST /clinic/user/v1/user
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>account</td>
-        <td>string</td>
-        <td>是</td>
-        <td>姓名</td>
-    </tr>
-    <tr>
-        <td>password</td>
-        <td>string</td>
-        <td>是</td>
-        <td>密码</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>string</td>
-        <td>是</td>
-        <td>姓名</td>
-    </tr>
-    <tr>
-        <td>gender</td>
-        <td>string</td>
-        <td>-</td>
-        <td>性别,男,女,未知</td>
-    </tr>
-    <tr>
-        <td>idcardNum</td>
-        <td>string</td>
-        <td>-</td>
-        <td>证件号码</td>
-    </tr>
-    <tr>
-        <td>mobile</td>
-        <td>string</td>
-        <td>-</td>
-        <td>手机号</td>
-    </tr>
-    <tr>
-        <td>birthday</td>
-        <td>date</td>
-        <td>-</td>
-        <td>出生日期, 格式: 2021-01-02</td>
-    </tr>
-    <tr>
-        <td>province</td>
-        <td>string</td>
-        <td>-</td>
-        <td>省</td>
-    </tr>
-    <tr>
-        <td>city</td>
-        <td>string</td>
-        <td>-</td>
-        <td>市</td>
-    </tr>
-    <tr>
-        <td>county</td>
-        <td>string</td>
-        <td>-</td>
-        <td>区(县)</td>
-    </tr>
-    <tr>
-        <td>address</td>
-        <td>string</td>
-        <td>-</td>
-        <td>地址</td>
-    </tr>
-    <tr>
-        <td>pic</td>
-        <td>string</td>
-        <td>-</td>
-        <td>照片, 个人照片</td>
-    </tr>
-    <tr>
-        <td>certificate</td>
-        <td>string</td>
-        <td>-</td>
-        <td>技能证书</td>
-    </tr>
-    <tr>
-        <td>education</td>
-        <td>string</td>
-        <td>-</td>
-        <td>学历</td>
-    </tr>
-    <tr>
-        <td>title</td>
-        <td>string</td>
-        <td>-</td>
-        <td>职称</td>
-    </tr>
-    <tr>
-        <td>graduatedSchool</td>
-        <td>string</td>
-        <td>-</td>
-        <td>毕业院校</td>
-    </tr>
-    <tr>
-        <td>graduatedTime</td>
-        <td>string</td>
-        <td>-</td>
-        <td>毕业时间</td>
-    </tr>
-    <tr>
-        <td>emergencyContact</td>
-        <td>string</td>
-        <td>-</td>
-        <td>紧急联系人</td>
-    </tr>
-    <tr>
-        <td>emergencyTel</td>
-        <td>string</td>
-        <td>-</td>
-        <td>紧急联系电话</td>
-    </tr>
-    <tr>
-        <td>roleId</td>
-        <td>long</td>
-        <td>-</td>
-        <td>角色ID</td>
-    </tr>
-</table>
-
 ## 用户列表
 
 ```
@@ -302,12 +166,6 @@ GET /clinic/user/v1/user
     </tr>
 </table>
 
-## 编辑用户
-
-```
-PATCH /clinic/user/v1/user/:id
-```
-
 ## 查看用户
 
 ```
@@ -320,8 +178,14 @@ GET /clinic/user/v1/user/:id
 GET /clinic/user/v1/user/current
 ```
 
-## 删除用户
+## 编辑当前登录用户
 
 ```
-DELETE /clinic/user/v1/user/:id
+PATCH /clinic/user/v1/user/current
+```
+
+## 当前登录用户诊所列表
+
+```
+GET /clinic/user/v1/user/clinic-list
 ```
