增加用户接口

--- a/诊所/crm/定片记录.md
+++ b/诊所/crm/定片记录.md
@@ -213,5 +213,5 @@ PATCH /clinic/crm/v1/lens-order-record/:id
 ## 删除定片记录
 
 ```
-PATCH /clinic/crm/v1/lens-order-record/:id
+DELETE /clinic/crm/v1/lens-order-record/:id
 ```
