--- a/诊所/crm/手术记录.md
+++ b/诊所/crm/手术记录.md
@@ -440,7 +440,7 @@ PATCH /clinic/crm/v1/surgery/record/:id
 ## 删除手术记录
 
 ```
-PATCH /clinic/crm/v1/surgery/record/:id
+DELETE /clinic/crm/v1/surgery/record/:id
 ```
 
 ## 手术回访列表
@@ -584,5 +584,5 @@ PATCH /clinic/crm/v1/surgery/return-visit-record/:id
 ## 删除手术回访记录
 
 ```
-PATCH /clinic/crm/v1/surgery/return-visit-record/:id
+DELETE /clinic/crm/v1/surgery/return-visit-record/:id
 ```
