--- a/诊所/crm/配置.md
+++ b/诊所/crm/配置.md
@@ -1,4 +1,4 @@
-# 检查配置
+# crm配置项
 
 > 更新记录
 
@@ -51,7 +51,7 @@
 ## 配置列表
 
 ```
-GET /clinic/optometry/v1/setting
+GET /clinic/crm/v1/setting
 ```
 > 请求参数
 
@@ -84,7 +84,7 @@ GET /clinic/optometry/v1/setting
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称, 逗号分隔, 可选: 综合评估,矫正方案建议,建议复诊时间</td>
+        <td>配置项名称, 逗号分隔, 可选: 回访计划</td>
     </tr>
 </table>
 
@@ -112,6 +112,6 @@ GET /clinic/optometry/v1/setting/get-by-name
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称: 综合评估,矫正方案建议,建议复诊时间</td>
+        <td>配置项名称: 回访计划</td>
     </tr>
 </table>
