--- a/诊所/通用/配置项.md
+++ b/诊所/通用/配置项.md
@@ -1,4 +1,4 @@
-# crm配置项
+# 配置项
 
 > 更新记录
 
@@ -21,6 +21,12 @@
         <th style="width:60px;">类型</th>
         <th style="width:200px;">说明</th>
         <th>备注</th>
+    </tr>
+    <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>模块</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>name</td>
@@ -51,7 +57,7 @@
 ## 配置列表
 
 ```
-GET /clinic/crm/v1/setting
+GET /clinic/optometry/v1/setting
 ```
 > 请求参数
 
@@ -78,20 +84,20 @@ GET /clinic/crm/v1/setting
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查</td>
+        <td>模块: 检查,手术</td>
     </tr>
     <tr>
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称, 逗号分隔, 可选: 回访计划</td>
+        <td>配置项名称, 逗号分隔, 可选: 综合评估,矫正方案建议,建议复诊时间,手术回访计划</td>
     </tr>
 </table>
 
 ## 配置查看
 
 ```
-GET /clinic/optometry/v1/setting/get-by-name
+GET /clinic/data/v1/setting/get-by-name
 ```
 > 请求参数
 
@@ -109,9 +115,15 @@ GET /clinic/optometry/v1/setting/get-by-name
         <td>诊所ID</td>
     </tr>
     <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>是</td>
+        <td>模块: 检查,手术</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称: 回访计划</td>
+        <td>配置项名称: 综合评估,矫正方案建议,建议复诊时间,手术回访计划</td>
     </tr>
 </table>
