增加用户接口

--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -35,9 +35,9 @@
     </tr>
     <tr>
         <td>followUpTime</td>
-        <td>int</td>
+        <td>datetime</td>
         <td>建议复诊时间</td>
-        <td>-</td>
+        <td>格式: 2022-01-02</td>
     </tr>
     <tr>
         <td>prescription</td>
@@ -180,9 +180,9 @@ PATCH /clinic/optometry/v1/optometry/:id
     </tr>
     <tr>
         <td>followUpTime</td>
-        <td>int</td>
+        <td>datetime</td>
         <td>-</td>
-        <td>建议复诊时间戳</td>
+        <td>建议复诊时间, 格式: 2022-01-02</td>
     </tr>
     <tr>
         <td>prescription</td>
