--- a/诊所/检查/设备信息.md
+++ b/诊所/检查/设备信息.md
@@ -73,6 +73,13 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>deviceId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>设备ID</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>status</td>
         <td>Status</td>
         <td>-</td>
