--- a/诊所/检查/检查项目.md
+++ b/诊所/检查/检查项目.md
@@ -29,6 +29,12 @@
         <td>常规,特检,处方</td>
     </tr>
     <tr>
+        <td>section</td>
+        <td>string</td>
+        <td>分组</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>名称</td>
