--- a/诊所/设置/诊所设置.md
+++ b/诊所/设置/诊所设置.md
@@ -13,37 +13,110 @@
     </tr>
 </table>
 
-## 全部设置项
-
-```
-GET /clinic/setting/v1/setting/:clinicId
-```
-
-## 按项查看
-
-```
-GET /clinic/setting/v1/setting/:clinicId?path=:item
-```
-
-> 其中:item为设置项, 见下表
-
-
-## 支付方式
-
-> item=payment
-> 返回值
+> 字段
 
 <table>
     <tr>
         <th style="width:150px;">属性名称</th>
         <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
         <th style="width:200px;">说明</th>
         <th>备注</th>
     </tr>
     <tr>
-        <td>methods</td>
-        <td>list</td>
-        <td>支付方式列表</td>
+        <td>name</td>
+        <td>string</td>
+        <td>是</td>
+        <td>名称</td>
         <td>-</td>
     </tr>
+    <tr>
+        <td>company</td>
+        <td>string</td>
+        <td>-</td>
+        <td>企业</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>contactName</td>
+        <td>string</td>
+        <td>-</td>
+        <td>联系人</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>contactTel</td>
+        <td>string</td>
+        <td>-</td>
+        <td>联系电话</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>province</td>
+        <td>string</td>
+        <td>-</td>
+        <td>省</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>city</td>
+        <td>string</td>
+        <td>-</td>
+        <td>市</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>county</td>
+        <td>string</td>
+        <td>-</td>
+        <td>区(县)</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>address</td>
+        <td>string</td>
+        <td>-</td>
+        <td>地址</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>workTimeStart</td>
+        <td>string</td>
+        <td>-</td>
+        <td>上班时间</td>
+        <td>格式: 08:01</td>
+    </tr>
+    <tr>
+        <td>workTimeEnd</td>
+        <td>string</td>
+        <td>-</td>
+        <td>下班时间</td>
+        <td>格式: 08:01</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>status</td>
+        <td>Status</td>
+        <td>-</td>
+        <td>状态</td>
+        <td>ok: 正常 expired: 过期 disabled: 禁用</td>
+    </tr>
 </table>
+
+## 查看诊所
+
+```
+GET /clinic/setting/v1/clinic/:id
+```
+
+## 编辑诊所
+
+```
+PATCH /clinic/setting/v1/clinic/:id
+```
