修改诊所设置

--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -217,3 +217,26 @@ GET /clinic/storage/v1/get
         <td>1: 下载 0:显示</td>
     </tr>
 </table>
+
+## 获取上传文件URL
+> 通过接口获取上传文件URL, 自带签名, 可直接访问
+`
+GET /clinic/storage/v1/url
+`
+
+> 请求参数:
+
+<table>
+    <tr>
+        <th style="width:150px;">请求参数</th>
+        <th>必须</th>
+        <th>类型</th>
+        <th>说明</th>
+    </tr>
+    <tr>
+        <td>key</td>
+        <td>是</td>
+        <td>string</td>
+        <td>文件key</td>
+    </tr>
+</table>
