增加App版本号

--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -23,6 +23,12 @@
         <th>备注</th>
     </tr>
     <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>模块</td>
+        <td>检查,手术</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>名称</td>
@@ -75,6 +81,12 @@ GET /clinic/setting/v1/setting
         <td>搜索关键词</td>
     </tr>
     <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>是</td>
+        <td>模块: 检查,手术</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>-</td>
@@ -101,6 +113,12 @@ GET /clinic/setting/v1/setting/get-by-name
         <td>string</td>
         <td>是</td>
         <td>诊所ID</td>
+    </tr>
+    <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>是</td>
+        <td>模块: 检查,手术</td>
     </tr>
     <tr>
         <td>name</td>
@@ -137,6 +155,12 @@ GET /clinic/setting/v1/setting/default
         <td>搜索关键词</td>
     </tr>
     <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>是</td>
+        <td>模块: 检查,手术</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>-</td>
@@ -163,6 +187,12 @@ POST /clinic/setting/v1/setting
         <td>string</td>
         <td>是</td>
         <td>诊所ID</td>
+    </tr>
+    <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>是</td>
+        <td>模块: 检查,手术</td>
     </tr>
     <tr>
         <td>name</td>
