增加App版本号

--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -90,7 +90,7 @@ GET /clinic/setting/v1/setting
         <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间,处方单</td>
+        <td>配置项名称: 综合评估,矫正方案建议,复诊时间</td>
     </tr>
 </table>
 
@@ -124,7 +124,7 @@ GET /clinic/setting/v1/setting/get-by-name
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间,处方单</td>
+        <td>配置项名称: 综合评估,矫正方案建议,复诊时间</td>
     </tr>
 </table>
 
@@ -164,11 +164,11 @@ GET /clinic/setting/v1/setting/default
         <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间,处方单</td>
+        <td>配置项名称: 综合评估,矫正方案建议,复诊时间</td>
     </tr>
 </table>
 
-## 添加配置项
+## 更新配置项
 
 ```
 POST /clinic/setting/v1/setting
@@ -198,7 +198,7 @@ POST /clinic/setting/v1/setting
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>名称</td>
+        <td>名称,综合评估,矫正方案建议,复诊时间</td>
     </tr>
     <tr>
         <td>data</td>
