增加App版本号

--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -12,13 +12,13 @@
 
 ## URL分配
 -------------------------
-- 诊所接口: https://crmtest.qingpai365.com/clinic/api
-- 诊所WEB: https://crmtest.qingpai365.com/clinic/web
-- 诊所微信: https://crmtest.qingpai365.com/clinic/wechat
+- 诊所接口: https://crmtest.qingpai365.com/api
+- 诊所WEB: https://crmtest.qingpai365.com/web
+- 诊所微信: https://crmtest.qingpai365.com/api/wechat
 
 ### 门店管理
-- 门店管理接口: https://crmtest.qingpai365.com/admin/api
-- 门店管理后台: https://crmtest.qingpai365.com/admin/web
+- 门店管理接口: https://crmtest.qingpai365.com/adminapi
+- 门店管理后台: https://crmtest.qingpai365.com/adminweb
 
 ## 测试账号
 -------------------------
