--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -7,22 +7,22 @@
 ## 请求主机
 -------------------------
 - 云端服务器: https://cloudapi.qingpai365.com
-- 业务服务器: https://crmtest.qingpai365.com
+- 业务服务器: https://erpdev.qingpai365.com
 - 服务地址: https://commservice.qingpai365.com
 
 ## URL分配
 -------------------------
-- 诊所接口: https://crmtest.qingpai365.com/api
-- 诊所WEB: https://crmtest.qingpai365.com/web
-- 诊所微信: https://crmtest.qingpai365.com/api/wechat
+- 诊所接口: https://erpdev.qingpai365.com/api
+- 诊所WEB: https://erpdev.qingpai365.com/web
+- 诊所微信: https://erpdev.qingpai365.com/api/wechat
 
 ### 门店管理
-- 门店管理接口: https://crmtest.qingpai365.com/adminapi
-- 门店管理后台: https://crmtest.qingpai365.com/adminweb
+- 门店管理接口: https://erpdev.qingpai365.com/adminapi
+- 门店管理后台: https://erpdev.qingpai365.com/adminweb
 
 ## 测试账号
 -------------------------
-- 门店: 测试医院管理员/1152201
+- 门店: erpdevadmin/Aa@123456
 
 ## 请求语法
 -------------------------
