增加App版本号

--- a/诊所/crm/候诊.md
+++ b/诊所/crm/候诊.md
@@ -305,25 +305,19 @@ GET /clinic/crm/v1/signin/status
         <td>optometry</td>
         <td>object</td>
         <td>检查数据</td>
-        <td>waitingCount: 待检查数量 totayCountTotal: 今日数量</td>
+        <td>waitingCount: 待检查数量 completedCount: 已完成数量</td>
     </tr>
     <tr>
-        <td>treatment</td>
+        <td>lensOrderRecord</td>
         <td>object</td>
-        <td>处置数据</td>
-        <td>unfinishedCount: 未完成数量</td>
+        <td>定片记录</td>
+        <td>completedCount: 已交片数</td>
     </tr>
     <tr>
-        <td>bill</td>
+        <td>surgeryRecord</td>
         <td>object</td>
-        <td>账单数据</td>
-        <td>amountReceivableTotal: 待收款</td>
-    </tr>
-    <tr>
-        <td>processing</td>
-        <td>object</td>
-        <td>加工数据</td>
-        <td>unfinishedCount: 未完成数量</td>
+        <td>手术记录</td>
+        <td>waitingReturnVisitCount: 待回访数量 completedCount: 全部数量</td>
     </tr>
 </table>
 
