--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -23,21 +23,9 @@
     </tr>
     <tr>
         <td>evaluation</td>
-        <td>string</td>
+        <td>json</td>
         <td>综合评估</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>suggestion</td>
-        <td>string</td>
-        <td>矫正方案建议</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>followUpTime</td>
-        <td>datetime</td>
-        <td>建议复诊时间</td>
-        <td>格式: 2022-01-02</td>
+        <td>包含: evaluation: 综合评估, suggestion: 矫正方案建议, followUpTime: 建议复诊时间</td>
     </tr>
     <tr>
         <td>prescription</td>
@@ -64,15 +52,33 @@
         <td>waiting("开单中"), doing("检查中"), ok("完成")</td>
     </tr>
     <tr>
+        <td>precheck</td>
+        <td>object</td>
+        <td>当日预检单</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>itemList</td>
         <td>array</td>
         <td>检查单项目列表</td>
         <td>-</td>
     </tr>
     <tr>
+        <td>checkItemList</td>
+        <td>array</td>
+        <td>检查单检查项列表</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>dataList</td>
         <td>array</td>
         <td>检查单数据列表</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>prescriptionItemList</td>
+        <td>array</td>
+        <td>检查单处方项目列表</td>
         <td>-</td>
     </tr>
     <tr>
