--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -174,21 +174,9 @@ PATCH /clinic/optometry/v1/optometry/:id
     </tr>
     <tr>
         <td>evaluation</td>
-        <td>string</td>
+        <td>json</td>
         <td>-</td>
-        <td>综合评估</td>
-    </tr>
-    <tr>
-        <td>suggestion</td>
-        <td>string</td>
-        <td>-</td>
-        <td>矫正方案建议</td>
-    </tr>
-    <tr>
-        <td>followUpTime</td>
-        <td>datetime</td>
-        <td>-</td>
-        <td>建议复诊时间, 格式: 2022-01-02</td>
+        <td>包含: evaluation: 综合评估, suggestion: 矫正方案建议, followUpTime: 建议复诊时间</td>
     </tr>
     <tr>
         <td>prescription</td>
