--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -25,13 +25,7 @@
         <td>evaluation</td>
         <td>json</td>
         <td>综合评估</td>
-        <td>包含: evaluation: 综合评估, suggestion: 矫正方案建议, followUpTime: 建议复诊时间</td>
-    </tr>
-    <tr>
-        <td>prescription</td>
-        <td>string</td>
-        <td>处方单</td>
-        <td>-</td>
+        <td>包含: evaluation: 综合评估, suggestion: 矫正方案建议, followUpTime: 建议复诊时间, prescription: 处方单</td>
     </tr>
     <tr>
         <td>totalAmount</td>
@@ -176,13 +170,7 @@ PATCH /clinic/optometry/v1/optometry/:id
         <td>evaluation</td>
         <td>json</td>
         <td>-</td>
-        <td>包含: evaluation: 综合评估, suggestion: 矫正方案建议, followUpTime: 建议复诊时间</td>
-    </tr>
-    <tr>
-        <td>prescription</td>
-        <td>string</td>
-        <td>-</td>
-        <td>处方单列表, 逗号分隔</td>
+        <td>包含: evaluation: 综合评估, suggestion: 矫正方案建议, followUpTime: 建议复诊时间, prescription: 处方单列表, 逗号分隔</td>
     </tr>
     <tr>
         <td>remark</td>
