检查单增加项目

--- a/诊所/检查/检查项目.md
+++ b/诊所/检查/检查项目.md
@@ -108,7 +108,7 @@ GET /clinic/optometry/v1/item
         <td>category</td>
         <td>string</td>
         <td>-</td>
-        <td>类型: 常规,特检,处方</td>
+        <td>类型: 常规,特检,处方, 支持逗号分隔多个值</td>
     </tr>
     <tr>
         <td>include</td>
