--- a/诊所/设置/检查项目.md
+++ b/诊所/设置/检查项目.md
@@ -244,6 +244,12 @@ GET /clinic/setting/v1/item
         <td>是</td>
         <td>诊所ID</td>
     </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>-</td>
+        <td>类别, 常规, 特检, 支持逗号分隔多个值</td>
+    </tr>
 </table>
 
 ## 系统支持的所有检查项列表
@@ -264,7 +270,7 @@ GET /clinic/setting/v1/item/default
         <td>category</td>
         <td>string</td>
         <td>-</td>
-        <td>类别, 常规, 特检</td>
+        <td>类别, 常规, 特检, 支持逗号分隔多个值</td>
     </tr>
     <tr>
         <td>keyword</td>
