检查单增加项目

--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -6,23 +6,22 @@
 
 ## 请求主机
 -------------------------
-- 云端服务器: https://cloudapi.qingpai365.com
-- 业务服务器: https://erpdev.qingpai365.com
+- 云端服务器: https://erpapi.qingpai365.com
+- 测试服务器: https://erptest.qingpai365.com
 - 服务地址: https://commservice.qingpai365.com
 
 ## URL分配
 -------------------------
-- 诊所接口: https://erpdev.qingpai365.com/api
-- 诊所WEB: https://erpdev.qingpai365.com/web
-- 诊所微信: https://erpdev.qingpai365.com/api/wechat
+- 诊所接口: https://erptest.qingpai365.com/api
+- 诊所WEB: https://erptest.qingpai365.com/web
+- 诊所微信: https://erptest.qingpai365.com/api/wechat
 
 ### 门店管理
-- 门店管理接口: https://erpdev.qingpai365.com/adminapi
-- 门店管理后台: https://erpdev.qingpai365.com/adminweb
+- 门店管理后台: https://erptest.qingpai365.com/adminweb
 
 ## 测试账号
 -------------------------
-- 门店: erpdevadmin/Aa@123456
+- 门店: erptest1/Aa@123456
 
 ## 请求语法
 -------------------------
