--- a/全局/登录认证.md
+++ b/全局/登录认证.md
@@ -3,7 +3,7 @@
 ## 诊所登录
 
 `
-POST /public/clinic/v1/user/login
+POST /public/user/v1/login
 `
 
 > 请求参数: 
@@ -78,7 +78,7 @@ POST /public/clinic/v1/user/login
 
 ## 刷新token
 `
-POST /public/clinic/v1/user/refresh
+POST /public/user/v1/refresh
 `
 
 > 请求参数:
@@ -95,5 +95,46 @@ POST /public/clinic/v1/user/refresh
         <td>是</td>
         <td>string</td>
         <td>刷新token</td>
+    </tr>
+</table>
+
+## 管理后台登录
+
+`
+POST /public/admin/v1/login
+`
+
+> 请求参数:
+
+<table>
+    <tr>
+        <th style="width:150px;">请求参数</th>
+        <th>必须</th>
+        <th>类型</th>
+        <th>说明</th>
+    </tr>
+    <tr>
+        <td>account</td>
+        <td>是</td>
+        <td>string</td>
+        <td>账号</td>
+    </tr>
+    <tr>
+        <td>password</td>
+        <td>是</td>
+        <td>string</td>
+        <td>密码</td>
+    </tr>
+    <tr>
+        <td>client</td>
+        <td>是</td>
+        <td>Client</td>
+        <td>客户端, 见系统参数，暂时用apad代表安卓平板</td>
+    </tr>
+    <tr>
+        <td>device</td>
+        <td>是</td>
+        <td>string</td>
+        <td>设备，设备描述，如华为S40平板v7.1, 浏览器传user-agent</td>
     </tr>
 </table>
