--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -90,7 +90,7 @@ GET /clinic/setting/v1/setting
         <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间</td>
+        <td>配置项名称: 逗号分隔, 检查: 综合评估,矫正方案建议,复诊时间 手术: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,回访计划,手术满意度</td>
     </tr>
 </table>
 
@@ -123,8 +123,8 @@ GET /clinic/setting/v1/setting/get-by-name
     <tr>
         <td>name</td>
         <td>string</td>
-        <td>是</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间</td>
+        <td>-</td>
+        <td>见上表</td>
     </tr>
 </table>
 
@@ -164,7 +164,7 @@ GET /clinic/setting/v1/setting/default
         <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>配置项名称: 综合评估,矫正方案建议,复诊时间</td>
+        <td>配置项名称, 见上表</td>
     </tr>
 </table>
 
@@ -198,7 +198,7 @@ POST /clinic/setting/v1/setting
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>名称,综合评估,矫正方案建议,复诊时间</td>
+        <td>名称, 见上表</td>
     </tr>
     <tr>
         <td>data</td>
