--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -26,7 +26,7 @@
         <td>module</td>
         <td>string</td>
         <td>模块</td>
-        <td>检查,手术</td>
+        <td>检查,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -84,13 +84,13 @@ GET /clinic/setting/v1/setting
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术</td>
+        <td>模块: 检查,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>配置项名称: 检查: 综合评估,矫正方案建议,复诊时间 手术: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
+        <td>配置项名称: 检查: 综合评估,矫正方案建议,复诊时间 手术记录: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
     </tr>
 </table>
 
@@ -118,7 +118,7 @@ GET /clinic/setting/v1/setting/get-by-name
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术</td>
+        <td>模块: 检查,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -158,7 +158,7 @@ GET /clinic/setting/v1/setting/default
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术</td>
+        <td>模块: 检查,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -192,7 +192,7 @@ POST /clinic/setting/v1/setting
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术</td>
+        <td>模块: 检查,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
