--- a/诊所/通用/配置项.md
+++ b/诊所/通用/配置项.md
@@ -90,7 +90,7 @@ GET /clinic/data/v1/setting
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称, 可选: 检查: 综合评估,矫正方案建议,复诊时间 手术: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
+        <td>配置项名称, 可选: 检查: 综合评估,矫正方案建议,复诊时间 手术记录: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
     </tr>
 </table>
 
@@ -124,6 +124,6 @@ GET /clinic/data/v1/setting/get-by-name
         <td>name</td>
         <td>string</td>
         <td>是</td>
-        <td>配置项名称: 检查: 综合评估,矫正方案建议,复诊时间 手术: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
+        <td>配置项名称: 检查: 综合评估,矫正方案建议,复诊时间 手术记录: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
     </tr>
 </table>
