--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -239,3 +239,26 @@ GET /clinic/storage/v1/url
         <td>文件key</td>
     </tr>
 </table>
+
+## 批量获取上传文件URL
+> 通过接口获取上传文件URL, 自带签名, 可直接访问
+`
+GET /clinic/storage/v1/urls
+`
+
+> 请求参数:
+
+<table>
+    <tr>
+        <th style="width:150px;">请求参数</th>
+        <th>必须</th>
+        <th>类型</th>
+        <th>说明</th>
+    </tr>
+    <tr>
+        <td>key</td>
+        <td>是</td>
+        <td>string</td>
+        <td>文件key, 逗号分隔</td>
+    </tr>
+</table>
