--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -26,7 +26,7 @@
         <td>module</td>
         <td>string</td>
         <td>模块</td>
-        <td>检查,手术记录</td>
+        <td>检查,定片记录,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -44,6 +44,12 @@
         <td>description</td>
         <td>string</td>
         <td>描述</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>valueType</td>
+        <td>string</td>
+        <td>值类型, string: 字符串 array: 数组</td>
         <td>-</td>
     </tr>
     <tr>
@@ -90,7 +96,7 @@ GET /clinic/setting/v1/setting
         <td>name</td>
         <td>string</td>
         <td>-</td>
-        <td>配置项名称: 检查: 综合评估,矫正方案建议,复诊时间 手术记录: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,回访计划,手术满意度</td>
+        <td>配置项名称: 检查: 综合评估,矫正方案建议,复诊时间 定片记录: 镜片类型,品牌型号,参数 手术记录: 诊断,手术方式,术前情况,术后情况,术后用药情况,术后筛查情况,手术医生,复查计划,手术满意度</td>
     </tr>
 </table>
 
@@ -118,7 +124,7 @@ GET /clinic/setting/v1/setting/get-by-name
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术记录</td>
+        <td>模块: 检查,定片记录,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -158,7 +164,7 @@ GET /clinic/setting/v1/setting/default
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术记录</td>
+        <td>模块: 检查,定片记录,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -192,7 +198,7 @@ POST /clinic/setting/v1/setting
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术记录</td>
+        <td>模块: 检查,定片记录,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
@@ -211,6 +217,12 @@ POST /clinic/setting/v1/setting
         <td>string</td>
         <td>-</td>
         <td>描述</td>
+    </tr>
+    <tr>
+        <td>valueType</td>
+        <td>string</td>
+        <td>-</td>
+        <td>值类型, 见上表</td>
     </tr>
     <tr>
         <td>remark</td>
