--- a/诊所/设置/配置项.md
+++ b/诊所/设置/配置项.md
@@ -90,7 +90,7 @@ GET /clinic/setting/v1/setting
         <td>module</td>
         <td>string</td>
         <td>是</td>
-        <td>模块: 检查,手术记录</td>
+        <td>模块: 检查,定片记录,手术记录</td>
     </tr>
     <tr>
         <td>name</td>
