采集网关设备

--- a/诊所/设备/采集网关.md
+++ b/诊所/设备/采集网关.md
@@ -81,7 +81,7 @@
 ## 采集网关列表
 
 ```
-GET /clinic/setting/v1/gateway
+GET /clinic/device/v1/gateway
 ```
 > 请求参数
 
@@ -106,90 +106,8 @@ GET /clinic/setting/v1/gateway
     </tr>
 </table>
 
-## 添加采集网关
+## 采集网关查看
 
 ```
-GET /clinic/setting/v1/gateway
-```
-> 请求参数
-
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>clinicId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>string</td>
-        <td>是</td>
-        <td>名称</td>
-    </tr>
-    <tr>
-        <td>description</td>
-        <td>string</td>
-        <td>否</td>
-        <td>描述</td>
-    </tr>
-    <tr>
-        <td>version</td>
-        <td>string</td>
-        <td>是</td>
-        <td>版本</td>
-    </tr>
-    <tr>
-        <td>ip</td>
-        <td>string</td>
-        <td>是</td>
-        <td>设备IP地址</td>
-    </tr>
-    <tr>
-        <td>port</td>
-        <td>int</td>
-        <td>是</td>
-        <td>服务端口</td>
-    </tr>
-    <tr>
-        <td>deviceId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>设备ID</td>
-    </tr>
-    <tr>
-        <td>deviceSn</td>
-        <td>string</td>
-        <td>是</td>
-        <td>设备序列号</td>
-    </tr>
-    <tr>
-        <td>wifi</td>
-        <td>string</td>
-        <td>-</td>
-        <td>网关提供的WIFI名称</td>
-    </tr>
-    <tr>
-        <td>remark</td>
-        <td>string</td>
-        <td>-</td>
-        <td>备注</td>
-    </tr>
-</table>
-
-## 编辑采集网关
-
-```
-PATCH /clinic/setting/v1/gateway/:id
-```
-
-## 删除采集网关
-
-```
-DELETE /clinic/setting/v1/gateway/:id
+GET /clinic/device/v1/gateway/:id
 ```
