采集网关设备

--- a/诊所/设备/设备信息.md
+++ b/诊所/设备/设备信息.md
@@ -92,6 +92,12 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>dataGatherType</td>
+        <td>string</td>
+        <td>数据获取方式</td>
+        <td>主动上传/网关获取</td>
+    </tr>
+    <tr>
         <td>status</td>
         <td>Status</td>
         <td>-</td>
