--- a/诊所/设置/设备信息.md
+++ b/诊所/设置/设备信息.md
@@ -92,6 +92,12 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>dataGatherType</td>
+        <td>string</td>
+        <td>数据获取方式</td>
+        <td>主动上传/网关获取</td>
+    </tr>
+    <tr>
         <td>status</td>
         <td>Status</td>
         <td>-</td>
@@ -204,6 +210,12 @@ POST /clinic/setting/v1/device/:id
         <td>string</td>
         <td>是</td>
         <td>设备序列号</td>
+    </tr>
+    <tr>
+        <td>dataGatherType</td>
+        <td>string</td>
+        <td>是</td>
+        <td>数据获取方式: 主动上传/网关获取</td>
     </tr>
     <tr>
         <td>remark</td>
