--- a/诊所/crm/待办事项.md
+++ b/诊所/crm/待办事项.md
@@ -1,4 +1,4 @@
-# 消息
+# 待办事项
 
 > 更新记录
 
@@ -83,9 +83,15 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>remindTime</td>
+        <td>todoTime</td>
         <td>date</td>
-        <td>提醒日期</td>
+        <td>预约办理日期</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>signinStatus</td>
+        <td>Status</td>
+        <td>候诊状态, waiting: 待候诊 ok: 已候诊</td>
         <td>-</td>
     </tr>
     <tr>
@@ -96,10 +102,10 @@
     </tr>
 </table>
 
-## 消息列表
+## 待办事项列表
 
 ```
-GET /clinic/message/v1/message
+GET /clinic/crm/v1/todo
 ```
 > 请求参数
 
@@ -132,20 +138,20 @@ GET /clinic/message/v1/message
         <td>start</td>
         <td>date</td>
         <td>-</td>
-        <td>开始时间, 默认3天前</td>
+        <td>开始时间, 默认现在</td>
     </tr>
     <tr>
         <td>end</td>
         <td>date</td>
         <td>-</td>
-        <td>结束时间, 默认3天后</td>
+        <td>结束时间, 默认2天后</td>
     </tr>
 </table>
 
-## 消息数量
+## 待办事项数量
 
 ```
-GET /clinic/message/v1/message/count-by-status
+GET /clinic/crm/v1/todo/count-by-status
 ```
 > 请求参数
 
@@ -178,54 +184,20 @@ GET /clinic/message/v1/message/count-by-status
         <td>start</td>
         <td>date</td>
         <td>-</td>
-        <td>开始时间, 默认3天前</td>
+        <td>开始时间, 默认现在</td>
     </tr>
     <tr>
         <td>end</td>
         <td>date</td>
         <td>-</td>
-        <td>结束时间, 默认3天后</td>
+        <td>结束时间, 默认2天后</td>
     </tr>
 </table>
 
-## 更新消息状态
+## 待办事项数量-按日期统计
 
 ```
-POST /clinic/message/v1/message/set-status
-```
-> 请求参数
-
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>clinicId</td>
-        <td>long</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>id</td>
-        <td>int</td>
-        <td>-</td>
-        <td>消息ID, 不传则处理所有消息</td>
-    </tr>
-    <tr>
-        <td>status</td>
-        <td>Status</td>
-        <td>是</td>
-        <td>消息状态</td>
-    </tr>
-</table>
-
-## 消息数量-按日期统计
-
-```
-GET /clinic/message/v1/message/count-by-date
+GET /clinic/todo/v1/todo/count-by-date
 ```
 
 > 请求参数
