增加等办事项

--- a/诊所/crm/待办事项.md
+++ b/诊所/crm/待办事项.md
@@ -123,10 +123,10 @@ GET /clinic/crm/v1/todo
         <td>诊所ID</td>
     </tr>
     <tr>
-        <td>patientId</td>
-        <td>long</td>
+        <td>category</td>
+        <td>string</td>
+        <td>消息类别, 检查复查, 手术复查, 预约</td>
         <td>-</td>
-        <td>患者ID</td>
     </tr>
     <tr>
         <td>keyword</td>
@@ -167,12 +167,6 @@ GET /clinic/crm/v1/todo/count-by-status
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>patientId</td>
-        <td>long</td>
-        <td>是</td>
-        <td>患者ID</td>
     </tr>
     <tr>
         <td>status</td>
