增加等办事项

--- a/诊所/crm/待办事项.md
+++ b/诊所/crm/待办事项.md
@@ -59,9 +59,15 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>模块, 检查 手术记录 预约</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>category</td>
         <td>string</td>
-        <td>消息类别</td>
+        <td>子分类</td>
         <td>-</td>
     </tr>
     <tr>
@@ -123,9 +129,15 @@ GET /clinic/crm/v1/todo
         <td>诊所ID</td>
     </tr>
     <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>模块, 检查 手术记录 预约</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>category</td>
         <td>string</td>
-        <td>消息类别, 检查复查, 手术复查, 预约</td>
+        <td>子分类</td>
         <td>-</td>
     </tr>
     <tr>
@@ -220,5 +232,17 @@ GET /clinic/crm/v1/todo/count-by-date
         <td>date</td>
         <td>-</td>
         <td>结束时间, 默认1月后</td>
+    </tr>
+    <tr>
+        <td>module</td>
+        <td>string</td>
+        <td>模块, 检查 手术记录 预约</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>子分类</td>
+        <td>-</td>
     </tr>
 </table>
