add injection record

--- a/诊所/crm/注药记录.md
+++ b/诊所/crm/注药记录.md
@@ -61,7 +61,7 @@
     <tr>
         <td>injectionTime</td>
         <td>date</td>
-        <td>注药时间</td>
+        <td>注射时间</td>
         <td>格式: 2022-01-02</td>
     </tr>
     <tr>
