增加等办事项

--- a/诊所/crm/患者.md
+++ b/诊所/crm/患者.md
@@ -335,6 +335,18 @@ GET /clinic/crm/v1/patient
         <td>手机号</td>
     </tr>
     <tr>
+        <td>mrn</td>
+        <td>string</td>
+        <td>-</td>
+        <td>病例号</td>
+    </tr>
+    <tr>
+        <td>createdDate</td>
+        <td>string</td>
+        <td>-</td>
+        <td>创建日期, 格式: 2022-01-02</td>
+    </tr>
+    <tr>
         <td>keyword</td>
         <td>string</td>
         <td>-</td>
