--- a/微信/扫码候诊.md
+++ b/微信/扫码候诊.md
@@ -2,125 +2,8 @@
 
 ## 扫码候诊流程
 
->步骤1. 候诊起始页面: /api/public/v1/wechat/redirect?appId=:appId&clinicId=:clinicId, 作用: 导航到微信授权页面
+>步骤1. 候诊起始页面: /api/public/v1/wechat/v1/auth?clientId=:clientId&clinicId=:clinicId, 作用: 导航到微信授权页面
 
->步骤2. 微信授权后, 返回页面: /api/public/v1/wechat/auth?appId=:appId&clinicId=:clinicId&openid=:openid, 作用: 获取openid, 跳转到前端页面
+>步骤2. 跳转到前端页面: /wechat/redirect?clientId=:clientId&clinicId=:clinicId&token=:token, 作用: 发放token, 跳转到前端页面
 
->步骤3. 跳转到前端页面: /wechat/redirect?appId=:appId&clinicId=:clinicId&token=:token, 作用: 发放token, 跳转到前端页面
-
->步骤4. 前端页面处理token, 进入候诊页面
-
-## 患者列表
->已绑定的患者列表, 字段见门店患者
-
-```
-GET /api/wechat/v1/customer
-```
-
-## 患者详情
-
-```
-GET /api/wechat/v1/customer/:id
-```
-
-## 添加患者
-
-```
-POST /api/wechat/v1/customer
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>clinicId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>string</td>
-        <td>是</td>
-        <td>姓名</td>
-    </tr>
-    <tr>
-        <td>mobile</td>
-        <td>string</td>
-        <td>-</td>
-        <td>手机号</td>
-    </tr>
-    <tr>
-        <td>gender</td>
-        <td>Gender</td>
-        <td>是</td>
-        <td>性别</td>
-    </tr>
-    <tr>
-        <td>birthday</td>
-        <td>date</td>
-        <td>-</td>
-        <td>出生日期</td>
-    </tr>
-    <tr>
-        <td>idcard</td>
-        <td>string</td>
-        <td>身份证</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>country</td>
-        <td>string</td>
-        <td>国家</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>province</td>
-        <td>string</td>
-        <td>省</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>city</td>
-        <td>string</td>
-        <td>市</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>county</td>
-        <td>string</td>
-        <td>区(县)</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>address</td>
-        <td>string</td>
-        <td>地址</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>address</td>
-        <td>string</td>
-        <td>-</td>
-        <td>地址</td>
-    </tr>
-</table>
-
-## 编辑患者
-
-```
-PATCH /api/wechat/v1/customer/:id
-```
-
-## 微信账户信息
-
->添加患者时可使用此接口获取微信信息填充表单部分字段
-
-```
-GET /api/wechat/v1/userinfo
-```
+>步骤4. 前端页面处理token, 进入患者列表
