--- a/微信/扫码候诊.md
+++ b/微信/扫码候诊.md
@@ -7,3 +7,33 @@
 >步骤2. 跳转到前端页面: /wechat/redirect?clientId=:clientId&clinicId=:clinicId&token=:token, 作用: 发放token, 跳转到前端页面
 
 >步骤4. 前端页面处理token, 进入患者列表
+>
+>
+
+## 候诊
+
+```
+POST /wechat/v1/signin
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>int</td>
+        <td>是</td>
+        <td>门诊ID</td>
+    </tr>
+    <tr>
+        <td>patientId</td>
+        <td>int</td>
+        <td>是</td>
+        <td>患者ID</td>
+    </tr>
+</table>
