--- a/微信/扫码候诊.md
+++ b/微信/扫码候诊.md
@@ -2,13 +2,11 @@
 
 ## 扫码候诊流程
 
->步骤1. 候诊起始页面: /api/public/v1/wechat/v1/auth?clientId=:clientId&clinicId=:clinicId, 作用: 导航到微信授权页面
+>公众号扫码页面: /api/public/v1/wechat/v1/start?type=scan&clientId=:clientId&clinicId=:clinicId&t=
+>公众号菜单页面: /api/public/v1/wechat/v1/start?type=menu&clientId=:clientId&clinicId=:clinicId&t=
+>患者绑定微信页: /api/public/v1/wechat/v1/start?type=bind&clientId=:clientId&clinicId=:clinicId&patientId=:patientId&t=
 
->步骤2. 跳转到前端页面: /wechat/redirect?clientId=:clientId&clinicId=:clinicId&token=:token, 作用: 发放token, 跳转到前端页面
-
->步骤4. 前端页面处理token, 进入患者列表
->
->
+>其中: clientId: 客户ID clinicId: 门诊(店)ID patientId: 患者ID t: 日期时间(变化使用它防止缓存)
 
 ## 候诊
 
