--- a/微信/微信首页.md
+++ b/微信/微信首页.md
@@ -23,8 +23,8 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>customer</td>
-        <td>Customer</td>
+        <td>patient</td>
+        <td>Patient</td>
         <td>患者信息</td>
         <td>见门店里患者文档</td>
     </tr>
@@ -40,24 +40,6 @@
         <td>检查单</td>
         <td>今日检查单, 见门店里检查单文档</td>
     </tr>
-    <tr>
-        <td>treatment</td>
-        <td>Treatment</td>
-        <td>处置单</td>
-        <td>今日处置单, 见门店里处置单文档</td>
-    </tr>
-    <tr>
-        <td>bill</td>
-        <td>Bill</td>
-        <td>账单</td>
-        <td>今日账单, 见门店里帐单文档</td>
-    </tr>
-    <tr>
-        <td>processing</td>
-        <td>Processing</td>
-        <td>加工单</td>
-        <td>今日加工单, 见门店里加工单文档</td>
-    </tr>
 </table>
 
 ## 首页数据
@@ -66,97 +48,3 @@
 GET /api/wechat/v1/index
 ```
 
-## 候诊患者
-
-```
-POST /api/wechat/v1/signin
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>clinicId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>customerId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>患者ID</td>
-    </tr>
-</table>
-
-
-## 检查单列表
-
-```
-GET /api/wechat/v1/optometry
-```
-
->参数: appId, clinicId, customerId
-
-## 检查单详情
-
-```
-GET /api/wechat/v1/optometry/:id
-```
-
->参数: appId, clinicId, customerId, id(检查单ID)
-
-
-## 处置单列表
-
-```
-GET /api/wechat/v1/treatment
-```
-
->参数: appId, clinicId, customerId
-
-## 处置单详情
-
-```
-GET /api/wechat/v1/treatment/:id
-```
-
->参数: appId, clinicId, customerId, id(处置单ID)
-
-
-## 帐单列表
-
-```
-GET /api/wechat/v1/bill
-```
-
->参数: appId, clinicId, customerId
-
-## 账单详情
-
-```
-GET /api/wechat/v1/bill/:id
-```
-
->参数: appId, clinicId, customerId, id(帐单ID)
-
-## 加工单列表
-
-```
-GET /api/wechat/v1/processing
-```
-
->参数: appId, clinicId, customerId
-
-## 加工单详情
-
-```
-GET /api/wechat/v1/processing/:id
-```
-
->参数: appId, clinicId, customerId, id(加工单ID)
