--- a/微信/扫码候诊.md
+++ b/微信/扫码候诊.md
@@ -2,11 +2,11 @@
 
 ## 扫码候诊流程
 
-#### 公众号扫码页面: /api/public/wechat/v1/start?type=scan&clientId=:clientId&clinicId=:clinicId&t=
-#### 公众号菜单页面: /api/public/wechat/v1/start?type=menu&clientId=:clientId&clinicId=:clinicId&t=
-#### 患者绑定微信页: /api/public/wechat/v1/start?type=bind&clientId=:clientId&clinicId=:clinicId&patientId=:patientId&t=
+#### 公众号扫码页面: /api/public/wechat/v1/start?type=scan&clinicId=:clinicId&t=
+#### 公众号菜单页面: /api/public/wechat/v1/start?type=menu&clinicId=:clinicId&t=
+#### 患者绑定微信页: /api/public/wechat/v1/start?type=bind&clinicId=:clinicId&patientId=:patientId&t=
 
->其中: clientId: 客户ID clinicId: 门诊(店)ID patientId: 患者ID t: 日期时间(变化使用它防止缓存)
+>其中: clinicId: 门诊(店)ID patientId: 患者ID t: 日期时间(变化使用它防止缓存)
 
 ## 候诊
 
