增加功能模块开通查询

--- a/诊所/通用/功能.md
+++ b/诊所/通用/功能.md
@@ -13,7 +13,7 @@
     </tr>
 </table>
 
-> 功能字段
+> 功能字段, 值为true代表已开通
 
 <table>
     <tr>
@@ -26,13 +26,7 @@
         <td>wechat</td>
         <td>object</td>
         <td>微信</td>
-        <td>officialAccount: 公众号</td>
-    </tr>
-    <tr>
-        <td>wecom</td>
-        <td>object</td>
-        <td>企业微信</td>
-        <td>-</td>
+        <td>officialAccount: 公众号 wecom: 微信</td>
     </tr>
 </table>
 
@@ -57,5 +51,3 @@ GET /clinic/data/v1/function
         <td>诊所ID</td>
     </tr>
 </table>
-
-> 值为true代表已开通
