--- a/诊所/crm/候诊.md
+++ b/诊所/crm/候诊.md
@@ -108,58 +108,6 @@
     </tr>
 </table>
 
-
-## 候诊二维码
-
-```
-GET /clinic/wechat/v1/qrcode
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>clinicId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>诊所ID</td>
-    </tr>
-</table>
-
->返回数据
-
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">说明</th>
-        <th style="width:200px;">备注</th>
-    </tr>
-    <tr>
-        <td>errcode</td>
-        <td>int</td>
-        <td>错误码</td>
-        <td>0代表正常, 非0则有错误发生</td>
-    </tr>
-    <tr>
-        <td>errmsg</td>
-        <td>string</td>
-        <td>错误内容</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>url</td>
-        <td>string</td>
-        <td>微信二维码内容</td>
-        <td>将url内容生成二维码, 注意:此url不可访问,仅为二维码内容</td>
-    </tr>
-</table>
-
 ## 候诊患者
 
 ```
@@ -346,5 +294,34 @@ POST /clinic/crm/v1/signin/leave
         <td>string</td>
         <td>是</td>
         <td>患者ID</td>
+    </tr>
+</table>
+
+## 候诊检查
+
+```
+GET /clinic/crm/v1/signin/check
+```
+
+>请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+    <tr>
+        <td>patientId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>患者ID,逗号分隔</td>
     </tr>
 </table>
