增加患者标签更新

--- a/诊所/crm/患者.md
+++ b/诊所/crm/患者.md
@@ -372,3 +372,31 @@ GET /clinic/crm/v1/patient/:id
 ```
 DELETE /clinic/crm/v1/patient/:id
 ```
+
+## 患者解绑微信公众号
+
+```
+POST /clinic/crm/v1/patient/unbind-wechat-officialaccount
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>int</td>
+        <td>-</td>
+        <td>门店Id</td>
+    </tr>
+    <tr>
+        <td>patientId</td>
+        <td>int</td>
+        <td>-</td>
+        <td>患者ID</td>
+    </tr>
+</table>
