增加患者标签更新

--- a/诊所/crm/患者.md
+++ b/诊所/crm/患者.md
@@ -373,7 +373,7 @@ GET /clinic/crm/v1/patient/:id
 DELETE /clinic/crm/v1/patient/:id
 ```
 
-## 患者解绑微信公众号
+## 患者解绑微信
 
 ```
 POST /clinic/crm/v1/patient/unbind-wechat-officialaccount
