增加患者标签更新

--- a/诊所/用户/用户.md
+++ b/诊所/用户/用户.md
@@ -89,6 +89,12 @@
         <td>个人照片</td>
     </tr>
     <tr>
+        <td>externalUserid</td>
+        <td>string</td>
+        <td>企业微信用户ID</td>
+        <td>如果为空, 则企业微信未绑定</td>
+    </tr>
+    <tr>
         <td>certificate</td>
         <td>string</td>
         <td>技能证书</td>
