--- a/企业微信/患者.md
+++ b/企业微信/患者.md
@@ -329,3 +329,129 @@ GET /wecom/v1/patient/:id
 ```
 DELETE /wecom/v1/patient/:id
 ```
+
+## 患者搜索
+
+```
+GET /wecom/v1/patient/search
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>门店Id</td>
+    </tr>
+    <tr>
+        <td>name</td>
+        <td>string</td>
+        <td>-</td>
+        <td>姓名</td>
+    </tr>
+    <tr>
+        <td>gender</td>
+        <td>string</td>
+        <td>-</td>
+        <td>性别</td>
+    </tr>
+    <tr>
+        <td>idcardType</td>
+        <td>string</td>
+        <td>-</td>
+        <td>证件类型</td>
+    </tr>
+    <tr>
+        <td>idcardNum</td>
+        <td>string</td>
+        <td>-</td>
+        <td>证件号码</td>
+    </tr>
+    <tr>
+        <td>mobile</td>
+        <td>string</td>
+        <td>-</td>
+        <td>手机号</td>
+    </tr>
+    <tr>
+        <td>mrn</td>
+        <td>string</td>
+        <td>-</td>
+        <td>病例号</td>
+    </tr>
+    <tr>
+        <td>createdDate</td>
+        <td>string</td>
+        <td>-</td>
+        <td>创建日期, 格式: 2022-01-02</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>搜索关键词</td>
+    </tr>
+</table>
+
+## 绑定患者
+
+```
+POST /wecom/v1/patient/bind
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>externalUserId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>企业微信客户ID</td>
+    </tr>
+    <tr>
+        <td>patientId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>患者ID</td>
+    </tr>
+</table>
+
+## 解绑患者
+
+```
+POST /wecom/v1/patient/unbind
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>externalUserId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>企业微信客户ID</td>
+    </tr>
+    <tr>
+        <td>patientId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>患者ID</td>
+    </tr>
+</table>
